ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
14/04/08 Oleh_Derevenko

        * Fixed possible memory corruption in new trimesh-trimesh collider
          in case if two degenerated triangles are checked against each other.

12/04/08 Oleh_Derevenko

        * Fixed sporadic assertion failure on vector normalization caused
          by small triangles degenerating into segments during space 
          transformations.

03/28/08 Remi

        * Fix a bug in dJointXXXGetInfo. The value in limot.limit was not
          always updated. (Ex: If hi and lo limit were changed). 

03/27/08 Remi

        * Added a new Joint: Prismatic Universal (patch #1828454).

         Daniel K. O.

        * Fixed bug #1841309: collide2() method buggy.

03/18/08 Rodrigo

        * New function: dVector4Copy.

03/14/08 david

        * Added stub calls for trimesh functions.
        * Applied patch #1914232: dGetConfiguration.
        * Applied patch #1655333: Optimize the function dNormalize3.
        * New function: dSetColliderOverride.
        * New function: dCheckConfiguration.
        
         Daniel K. O.

        * Disabled building shared library by default with autotools.

03/13/08 david

        * New function: dJointGetNumBodies (patch #1901550).
        * New function: dSpaceGetClass (patch #1901637).
        * Applied patch #1901649: Add missing function in the export

03/12/08 Rodrigo

        * Fixed drawstuff build issues on OSX.

01/12/08 Daniel K. O.

	* Fixed a typedef bug in configure.in.
	* Added dCylinder to the C++ wrappers.
	* Applied patch 1851394: support for GIMPACT with double precision,
	  dCollide fix.
	* Moved bunny geometry to bunny_geom.h.
